# ubiquiti-protect-onvif-event-listener

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  README.md  THUMBNAILS.md  WORKSPACE  alarm_notifier.cpp  build-in-docker.sh  camera_change_log.cpp  detection_recorder.cpp  detection_recorder.hpp  jpeg_crop.hpp  main.cpp  motion_poller.cpp  motion_poller.hpp  object_detect.cpp  object_detect.hpp  onvif-recorder.service  onvif_listener.cpp  onvif_listener.hpp  ubv_thumbnail.hpp  unifi_camera_config.cpp  unifi_camera_config.hpp
.githooks/: pre-push
.github/workflows/: promote.yml  release-deb.yml  release-windows.yml
bazel/: arm64_sysroot.bzl  pkg_config.bzl
debian/: detect-channel.sh  onvif-recorder.service
gh-pages/: install.sh
scripts/: pgo_collect_arm64.sh
src/: admin_server.cpp  admin_server.hpp  alarm_notifier.cpp  alarm_notifier.hpp  camera_change_log.cpp  camera_change_log.hpp  cameras_change_listener.cpp  cameras_change_listener.hpp  contention_profiler.cpp  contention_profiler.hpp  detection_recorder.cpp  detection_recorder.hpp  dump_sanitizer.cpp  dump_sanitizer.hpp  enrich_events_main.cpp  event_recorder.cpp  event_recorder.hpp  event_recovery.cpp  event_recovery.hpp  jpeg_crop.cpp  log_ring.cpp  log_ring.hpp  log_server.cpp  log_server.hpp  main.cpp  motion_poller.cpp  motion_poller.hpp  msr_backfill.cpp  msr_backfill.hpp  msr_client.cpp  msr_client.hpp  object_detect.cpp  object_detect.hpp  onvif_listener.cpp  onvif_listener.hpp  pg_util.cpp  pg_util.hpp  protect_pid_watcher.cpp  protect_pid_watcher.hpp  protect_ui_patch.cpp  (+11 more)
test/: BUILD.bazel  bench_jpeg_crop.cpp  bench_object_detect.cpp  bench_onvif_listener.cpp  camera_emulators.cpp  camera_emulators.hpp  gen_examples.cpp  test_alarm_notifier.cpp  test_camera_change_log.cpp  test_detect_channel.sh  test_detection_recorder.cpp  test_dump_sanitizer.cpp  test_event_recovery.cpp  test_motion_poller.cpp  test_msr_client.cpp  test_onvif_listener.cpp  test_pg_util.cpp  test_protect_ui_patch.cpp  test_protect_user_id_provider.cpp  test_raw_sink.cpp  test_runtime_config.cpp  test_ubv_thumbnail.cpp  test_unifi_camera_config.cpp
test/testdata/: reolink_bullet.jsonl
windows-installer/OnvifRecorderInstaller/: OnvifRecorderInstaller.csproj
windows-installer/OnvifRecorderInstaller/Services/: InstallScripts.cs  SshService.cs
