# Platform-select helpers.
# x86 host: built from source via git submodules (//third_party:...).
# ARM64: pre-built sysroot downloaded by arm64_sysroot repository rule.
_XML2   = select({"@platforms//cpu:aarch64": ["@arm64_sysroot//:libxml2"],
                  "//conditions:default":    ["//third_party:libxml2"]})
_CURL   = select({"@platforms//cpu:aarch64": ["@arm64_sysroot//:libcurl"],
                  "//conditions:default":    ["//third_party:libcurl"]})
_SSL    = select({"@platforms//cpu:aarch64": ["@arm64_sysroot//:openssl"],
                  "//conditions:default":    ["//third_party:openssl"]})
_MHD    = select({"@platforms//cpu:aarch64": ["@arm64_sysroot//:libmicrohttpd"],
                  "//conditions:default":    ["//third_party:libmicrohttpd"]})
_PQ     = select({"@platforms//cpu:aarch64": ["@arm64_sysroot//:libpq"],
                  "//conditions:default":    ["//third_party:libpq"]})
_JPEG   = select({"@platforms//cpu:aarch64": ["@arm64_sysroot//:libjpeg"],
                  "//conditions:default":    ["//third_party:libjpeg_turbo"]})

# NCNN dependency: host builds use rules_foreign_cc CMake; ARM64 has no NCNN yet.
_NCNN_DEPS = select({
    "@platforms//cpu:aarch64": [],
    "//conditions:default":    ["//third_party:ncnn"],
})

_NCNN_DEFS = select({
    "@platforms//cpu:aarch64": [],
    "//conditions:default":    ["WITH_NCNN"],
})

cc_library(
    name = "onvif_listener",
    srcs = ["onvif_listener.cpp"],
    hdrs = ["onvif_listener.hpp"],
    deps = _CURL + _XML2 + _SSL + [
        ":jpeg_crop",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ubv_thumbnail",
    srcs = ["ubv_thumbnail.cpp"],
    hdrs = ["ubv_thumbnail.hpp"],
    deps = [
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "jpeg_crop",
    srcs = ["jpeg_crop.cpp"],
    hdrs = ["jpeg_crop.hpp"],
    deps = _JPEG,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "object_detect",
    srcs = ["object_detect.cpp"],
    hdrs = ["object_detect.hpp"],
    defines = _NCNN_DEFS,
    deps = [
        ":jpeg_crop",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ] + _JPEG + _NCNN_DEPS,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "detection_recorder",
    srcs = ["detection_recorder.cpp"],
    hdrs = ["detection_recorder.hpp"],
    deps = [
        ":jpeg_crop",
        ":object_detect",
        ":onvif_listener",
        ":ubv_thumbnail",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ] + _CURL + _JPEG + _PQ,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unifi_camera_config",
    srcs = ["unifi_camera_config.cpp"],
    hdrs = ["unifi_camera_config.hpp"],
    deps = [
        ":onvif_listener",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ] + _PQ,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "onvif_recorder",
    srcs = ["main.cpp"],
    linkstatic = True,
    deps = [
        ":detection_recorder",
        ":object_detect",
        ":onvif_listener",
        ":unifi_camera_config",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:globals",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/log:log",
    ],
)

sh_binary(
    name = "install_hooks",
    srcs = ["scripts/install_hooks.sh"],
)

# ---------------------------------------------------------------------------
# PGO + ThinLTO benchmark workflow
#
# x86_64 (full instrumented PGO):
#   bazel run //:pgo_bench_x86               # baseline → instrument → profile → optimised
#   bazel run //:pgo_bench_x86 -- 100000     # custom event count
#
# ARM64 (cross-PGO -- reuses the x86 profile, runs under QEMU):
#   sudo apt-get install qemu-user-static
#   bazel run //:pgo_bench_x86               # collect x86 profile first
#   bazel run //:pgo_bench_arm64
#
# Clean generated profile data:
#   bazel run //:pgo_clean
# ---------------------------------------------------------------------------

sh_binary(
    name = "pgo_bench_x86",
    srcs = ["scripts/pgo_bench_x86.sh"],
)

sh_binary(
    name = "pgo_bench_arm64",
    srcs = ["scripts/pgo_bench_arm64.sh"],
)

sh_binary(
    name = "pgo_clean",
    srcs = ["scripts/pgo_clean.sh"],
)

cc_binary(
    name = "ubv_extract",
    srcs = ["ubv_extract.cpp"],
    deps = [
        ":ubv_thumbnail",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status:statusor",
    ] + _PQ,
)
