config_setting(
    name = "is_arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

filegroup(
    name = "tsan_suppressions",
    srcs = ["tsan_suppressions.txt"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "onvif_camera_emulator",
    srcs = ["onvif_camera_emulator.cpp"],
    hdrs = ["onvif_camera_emulator.hpp"],
    deps = select({
        ":is_arm64": ["@arm64_sysroot//:libmicrohttpd"],
        "//conditions:default": ["//third_party:libmicrohttpd"],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "camera_emulators",
    srcs = ["camera_emulators.cpp"],
    hdrs = ["camera_emulators.hpp"],
    deps = [
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

filegroup(
    name = "hikvision_raw_log",
    srcs = ["testdata/hikvision_compatible_20260219.jsonl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dahua_raw_log",
    srcs = ["testdata/dahua_dh_sd4a425db_hny_20260219.jsonl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cell_motion_raw_log",
    srcs = ["testdata/cell_motion_camera_20260321.jsonl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cell_motion_no_events_raw_log",
    srcs = ["testdata/cell_motion_no_events_20260321.jsonl"],
)

filegroup(
    name = "thingino_raw_log",
    srcs = ["testdata/thingino_wyze_20260321.jsonl"],
)

filegroup(
    name = "html_404_raw_log",
    srcs = ["testdata/html_404_camera_20260321.jsonl"],
)

filegroup(
    name = "unvr_78_raw_log",
    srcs = ["testdata/unvr_cell_motion_78_20260321.jsonl"],
)

filegroup(
    name = "unvr_119_raw_log",
    srcs = ["testdata/unvr_cell_motion_119_20260321.jsonl"],
)

filegroup(
    name = "unvr_173_raw_log",
    srcs = ["testdata/unvr_cell_motion_173_20260321.jsonl"],
)

filegroup(
    name = "unvr_227_raw_log",
    srcs = ["testdata/unvr_cell_motion_227_20260321.jsonl"],
)

filegroup(
    name = "unvr_245_raw_log",
    srcs = ["testdata/unvr_cell_motion_245_20260321.jsonl"],
)

filegroup(
    name = "unvr_251_raw_log",
    srcs = ["testdata/unvr_cell_motion_251_20260321.jsonl"],
)

filegroup(
    name = "unvr_1_45_raw_log",
    srcs = ["testdata/unvr_cell_motion_1_45_20260321.jsonl"],
)

filegroup(
    name = "unvr_1_47_raw_log",
    srcs = ["testdata/unvr_cell_motion_1_47_20260321.jsonl"],
)

filegroup(
    name = "reolink_bullet_raw_log",
    srcs = ["testdata/reolink_bullet.jsonl"],
)

cc_test(
    name = "test_onvif_listener",
    srcs = ["test_onvif_listener.cpp"],
    env = {"TSAN_OPTIONS": "suppressions=$(location //test:tsan_suppressions)"},
    args = [
        "$(location //test:hikvision_raw_log)",
        "$(location //test:dahua_raw_log)",
        "$(location //test:cell_motion_raw_log)",
        "$(location //test:cell_motion_no_events_raw_log)",
        "$(location //test:thingino_raw_log)",
        "$(location //test:html_404_raw_log)",
        "$(location //test:unvr_78_raw_log)",
        "$(location //test:unvr_119_raw_log)",
        "$(location //test:unvr_173_raw_log)",
        "$(location //test:unvr_227_raw_log)",
        "$(location //test:unvr_245_raw_log)",
        "$(location //test:unvr_251_raw_log)",
        "$(location //test:unvr_1_45_raw_log)",
        "$(location //test:unvr_1_47_raw_log)",
        "$(location //test:reolink_bullet_raw_log)",
    ],
    data = [
        "//test:tsan_suppressions",
        "//test:hikvision_raw_log",
        "//test:dahua_raw_log",
        "//test:cell_motion_raw_log",
        "//test:cell_motion_no_events_raw_log",
        "//test:thingino_raw_log",
        "//test:html_404_raw_log",
        "//test:unvr_78_raw_log",
        "//test:unvr_119_raw_log",
        "//test:unvr_173_raw_log",
        "//test:unvr_227_raw_log",
        "//test:unvr_245_raw_log",
        "//test:unvr_251_raw_log",
        "//test:unvr_1_45_raw_log",
        "//test:unvr_1_47_raw_log",
        "//test:reolink_bullet_raw_log",
    ],
    deps = [
        "//:onvif_listener",
        ":camera_emulators",
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_detection_recorder",
    srcs = ["test_detection_recorder.cpp"],
    env = {"TSAN_OPTIONS": "suppressions=$(location //test:tsan_suppressions)"},
    data = [
        "//test:tsan_suppressions",
        "testdata/snapshot_108.jpg",
        "testdata/snapshot_109.jpg",
    ],
    linkstatic = True,
    deps = [
        "//:alarm_notifier",
        "//:detection_recorder",
        "//:ubv_thumbnail",
        ":camera_emulators",
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_ubv_thumbnail",
    srcs = ["test_ubv_thumbnail.cpp"],
    data = [
        "testdata/snapshot_108.jpg",
        "testdata/snapshot_109.jpg",
    ],
    deps = [
        "//:ubv_thumbnail",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "protect_ui_patch_internal",
    textual_hdrs = [
        "//:src/protect_ui_patch.cpp",
    ],
    hdrs = ["//:src/protect_ui_patch.hpp"],
    deps = [
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_protect_ui_patch",
    srcs = ["test_protect_ui_patch.cpp"],
    deps = [
        ":protect_ui_patch_internal",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_camera_change_log",
    srcs = ["test_camera_change_log.cpp"],
    deps = [
        "//:camera_change_log",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_runtime_config",
    srcs = ["test_runtime_config.cpp"],
    deps = [
        "//:runtime_config",
        "@com_google_absl//absl/flags:flag",
    ],
)

cc_test(
    name = "test_dump_sanitizer",
    srcs = ["test_dump_sanitizer.cpp"],
    deps = [
        "//:dump_sanitizer",
    ],
)

cc_test(
    name = "test_raw_sink",
    srcs = ["test_raw_sink.cpp"],
    deps = [
        "//:onvif_listener",
    ],
)

cc_test(
    name = "test_unifi_camera_config",
    srcs = ["test_unifi_camera_config.cpp"],
    deps = [
        "//:unifi_camera_config",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_msr_client",
    srcs = ["test_msr_client.cpp"],
    deps = [
        "//:msr_client",
    ],
)

cc_test(
    name = "test_alarm_notifier",
    srcs = ["test_alarm_notifier.cpp"],
    deps = [
        "//:alarm_notifier",
    ],
)

cc_test(
    name = "test_admin_server",
    srcs = ["test_admin_server.cpp"],
    deps = [
        "//:admin_server",
    ],
)

cc_test(
    name = "test_motion_poller",
    srcs = ["test_motion_poller.cpp"],
    linkstatic = True,
    deps = [
        "//:motion_poller",
        "//:object_detect",
        "@com_google_absl//absl/status:statusor",
    ],
)

filegroup(
    name = "bench_onvif_raw_log",
    srcs = ["testdata/bench_onvif.jsonl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "security_cam_outdoor_jpg",
    srcs = ["testdata/security_cam_outdoor.jpg"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "security_cam_person_jpg",
    srcs = ["testdata/security_cam_person.jpg"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "security_cam_vehicle_jpg",
    srcs = ["testdata/security_cam_vehicle.jpg"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "bench_onvif_listener",
    srcs = ["bench_onvif_listener.cpp"],
    args = ["$(location //test:bench_onvif_raw_log)"],
    data = ["//test:bench_onvif_raw_log"],
    deps = [
        "//:onvif_listener",
        ":camera_emulators",
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_binary(
    name = "bench_jpeg_crop",
    srcs = ["bench_jpeg_crop.cpp"],
    args = ["$(location //test:security_cam_outdoor_jpg)"],
    data = [
        "//test:security_cam_outdoor_jpg",
        "//test:security_cam_person_jpg",
        "//test:security_cam_vehicle_jpg",
    ],
    deps = ["//:jpeg_crop"],
)

cc_binary(
    name = "gen_examples",
    srcs = ["gen_examples.cpp"],
    deps = [
        "//:jpeg_crop",
        "//:object_detect",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_binary(
    name = "bench_object_detect",
    srcs = ["bench_object_detect.cpp"],
    args = [
        "$(location @nanodet_m_param//file)",
        "$(location @nanodet_m_bin//file)",
        "$(location //test:security_cam_outdoor_jpg)",
    ],
    data = [
        "@nanodet_m_param//file",
        "@nanodet_m_bin//file",
        "//test:security_cam_outdoor_jpg",
    ],
    deps = ["//:object_detect"],
)
